[gd_scene load_steps=2 format=3 uid="uid://g2s13ivrto7p"]

[ext_resource type="Script" uid="uid://c4tcg0ku7182m" path="res://GUI/win_death/win_lose_screen.gd" id="1_6f0vm"]

[node name="WinLoseScreen" type="CanvasLayer"]
process_mode = 2
layer = 10
script = ExtResource("1_6f0vm")
level_select_scene = "uid://cyg5jqs2vh6x5"

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.29411766)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 160)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -23.5
offset_right = 20.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Title"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TryAgainButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
layout_mode = 2
text = "Try Again"

[node name="LevelSelectButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
layout_mode = 2
text = "Select Another Level"
